--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "strapi-server.js",
   "scripts": {
     "develop": "tsc -w",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "keywords": [
     "strapi",
